--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,25 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+
+  <body>
+    <header class="header">
+    </header>
+    <div class="left-border">
+    </div>
+      <div class="right-border">
+      </div>
+        <div>
+          <div class="middle-top">
+          </div>
+            <div class="middle-bottom">
+            </div>
+        </div>
+
+  </body>
+</html>
